tests/files/parser_tests/should_fail/106.cmdr
//Should not parse else statement by itself
else {
	x = 3;
}